language/move-lang/tests/move_check/parser/friend_decl_inside_function.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/friend_decl_inside_function.move:6:9
  │
6 │         friend 0x42::A;
  │         ^^^^^^
  │         │
  │         Unexpected 'friend'
  │         Expected an expression term

