language/move-lang/tests/move_check/parser/friend_decl_inside_function.move
address 0x42 {
module A {}

module M {
    fun M() {
        friend 0x42::A;
    }
}
}
